feat: update validation for status and category codes to allow only uppercase letters and spaces